--- a/src/app/components/graphview/graphview.component.css
+++ b/src/app/components/graphview/graphview.component.css
@@ -1,27 +1,13 @@
-.axis {
-  font: 10px sans-serif;
+
+.link { stroke: #999; stroke-opacity: .6; stroke-width: 1px; }
+
+.links line {
+  stroke: #999;
+  stroke-opacity: 0.6;
 }
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.axis-title {
-  fill: none;
-  stroke: black;
-  stroke-width: 0.5px;
-}
-
-
-.axis--x path {
-  /*display: none;*/
-}
-
-.line {
-  fill: none;
-  stroke: steelblue;
+.nodes circle {
+  stroke: #fff;
   stroke-width: 1.5px;
+  cursor: pointer;
 }
