--- a/src/app/components/graphview/graphview.component.html
+++ b/src/app/components/graphview/graphview.component.html
@@ -1,1 +1,5 @@
-<svg width="100%" height="100%"></svg>
+<!-- <svg width="100%" height="100%"></svg> -->
+
+<!-- <graph [nodes]="nodes" [links]="links"></graph> -->
+
+<svg width="960" height="600"></svg>
