--- a/src/app/components/graphview/graphview.component.css
+++ b/src/app/components/graphview/graphview.component.css
@@ -11,3 +11,10 @@
   stroke-width: 1.5px;
   cursor: pointer;
 }
+
+div#container {
+  height: 80%;
+  width: 100%; 
+  overflow: scroll;
+  overflow-y: scroll;
+ }
