Adjust styling and content of footer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,12 +37,15 @@
     </div>
     <div class="col-8">
       <app-graphview></app-graphview>
-  </div>
+    </div>
   </div>
 </main>
 
 <footer class="footer">
   <div class="container">
-    <span class="text-muted">2018 Institute for Digital Humanities, University of Cologne</span>
+    <span class="text-muted">
+      2018 <a href="http://www.hki.uni-koeln.de">Institute for Digital Humanities, University of Cologne</a>
+      <a href="https://github.com/DH-Cologne/VisualizeRDF-XML"><img src="assets/img/github-tiny.png" alt="GitHub Repository"></a>
+    </span>
   </div>
 </footer>
