--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,9 +13,20 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  height: 40px;
+  line-height: 40px; /* Vertically center the text there */
+  background-color: #eee;
+  font-size: 12px;
+}
+
+.footer a {
+  color: #333;
+}
+
+.footer img {
+  margin-left: 5px;
+  margin-top: -3px;
+  height: 18px;
 }
 
 :host {
