Prepare display of syntax highlighted XML file.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,11 @@
       <app-graphview></app-graphview>
     </div>
   </div>
+  <div class="row">
+    <div class="col-12">
+      <app-xmlview></app-xmlview>
+    </div>
+  </div>
 </main>
 
 <footer class="footer">
