Display content of xml file; remove ngx-highlightjs.

--- a/src/app/components/xmlview/xmlview.component.html
+++ b/src/app/components/xmlview/xmlview.component.html
@@ -1,3 +1,1 @@
-<div *ngIf="markup | async">
-  <pre><code highlight [code]="markup | async"></code></pre>
-</div>
+  <pre><code>{{markup}}</code></pre>
