link xml-text-objects and rdf-graph-objects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,18 +32,18 @@
 
 <main role="main" id="maincontent" class="container-fluid">
   <div class="row">
-    <div class="col-4">
+    <div class="col-5" style="overflow-y: scroll; height:650px;">
       <app-textview></app-textview>
     </div>
-    <div class="col-8">
+    <div class="col-6">
       <app-graphview></app-graphview>
     </div>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-12">
       <app-xmlview></app-xmlview>
     </div>
-  </div>
+  </div> -->
 </main>
 
 <footer class="footer">
