--- a/src/app/components/textview/textview.component.html
+++ b/src/app/components/textview/textview.component.html
@@ -1,6 +1,6 @@
-<h1>Iranian jewellery and small finds in religious context</h1>
+<h2>Iranian jewellery and small finds in religious context</h2>
 
-<h2>By Natascha Bagherpour Kashani</h2>
+<h3>By Natascha Bagherpour Kashani</h3>
 
 Links im folgenden XML Dokument sind mit Objekten der nebenstehenden RDF-Svg_Visualizierung verknüpft:
 
@@ -8,7 +8,49 @@ Iranian jewellery and small finds in religious context
 
 By Natascha Bagherpour Kashani
 
-Keywords; Iran, Parthian, Sasanian, finger-rings, beads.
+Keywords; Iran, Parthian, Sasanian, finger-rings, <a id = "object2" href = "http://localhost:4200/#node2" (click) = "zoomOnNode('node2')">Object-2</a>, beads.
+
+واژگان کلیدی: ایران، ا شکانیان، ساسانیان، انگشترها، مهرهها
+
+The items discovered in the Cale Gar mines at Vesnave have added a fresh perspective to the investigation of pre-lslamic religion, as emphasized by
+
+Overlaet, J. Rose and P. Kreyenbroek.1 The finds from Vesnave make an important contribution to our knowledge, not only for researching pre-lslamic religion, but also for visualising the physical artefacts of ancient Iran.
+
+The importance of the study of jewellery finds from Vesnave
+
+In Vesnave, two mines were excavated by a team of German and Iranian archaeologists in several campaigns from 2001 to 2004.2 They discovered, mainly in Cale Gar 1, a great number of artefacts, among them jewellery - including many beads , finger-rings, ear-rings and pendants - and fragments of metal sheets , as well as much else. It is remarkable that these objects were found in such a con- text at Vesnave, because in Iran and the wider Near East, jewellery has been unearthed predominantly in graves. To excavate such an amount of artefacts in the Cale Gar caves has been, apart from their importance for the investigation of the pre-lslamic religion, a milestone for research into small finds in Iran and the Near East in general.
+
+The study of these objects is of great interest for the understanding of ritual practices at Vesnave, since establishing their chronology and provenance may help broaden knowledge of personal ornaments in ancient Iran.
+
+واژگان کلیدی: ایران، ا شکانیان، ساسانیان، انگشترها، مهرهها
+
+The items discovered in the Cale Gar mines at Vesnave have added a fresh perspective to the investigation of pre-lslamic religion, as emphasized by
+
+Overlaet, J. Rose and P. Kreyenbroek.1 The finds from Vesnave make an important contribution to our knowledge, not only for researching pre-lslamic religion, but also for visualising the physical artefacts of ancient Iran.
+
+The importance of the study of jewellery finds from Vesnave
+
+In Vesnave, two mines were excavated by a team of German and Iranian archaeologists in several campaigns from 2001 to 2004.2 They discovered, mainly in Cale Gar 1, a great number of artefacts, among them jewellery - including many beads , finger-rings, ear-rings and pendants - and fragments of metal sheets , as well as much else. It is remarkable that these objects were found in such a con- text at Vesnave, because in Iran and the wider Near East, jewellery has been unearthed predominantly in graves. To excavate such an amount of artefacts in the Cale Gar caves has been, apart from their importance for the investigation of the pre-lslamic religion, a milestone for research into small finds in Iran and the Near East in general.
+
+The study of these objects is of great interest for the understanding of ritual practices at Vesnave, since establishing their chronology and provenance may help broaden knowledge of personal ornaments in ancient Iran.
+
+Iranian jewellery and small finds in religious context
+
+By Natascha Bagherpour Kashani
+
+Keywords; Iran, <a id="object20" href="http://localhost:4200/#node20" (click)="zoomOnNode('node20')">Object-20</a>, Parthian, Sasanian, finger-rings, beads.
+
+واژگان کلیدی: ایران، ا شکانیان، ساسانیان، انگشترها، مهرهها
+
+The items discovered in the Cale Gar mines at Vesnave have added a fresh perspective to the investigation of pre-lslamic religion, as emphasized by
+
+Overlaet, J. Rose and P. Kreyenbroek.1 The finds from Vesnave make an important contribution to our knowledge, not only for researching pre-lslamic religion, but also for visualising the physical artefacts of ancient Iran.
+
+The importance of the study of jewellery finds from Vesnave
+
+In Vesnave, two mines were excavated by a team of German and Iranian archaeologists in several campaigns from 2001 to 2004.2 They discovered, mainly in Cale Gar 1, a great number of artefacts, among them jewellery - including many beads , finger-rings, ear-rings and pendants - and fragments of metal sheets , as well as much else. It is remarkable that these objects were found in such a con- text at Vesnave, because in Iran and the wider Near East, jewellery has been unearthed predominantly in graves. To excavate such an amount of artefacts in the Cale Gar caves has been, apart from their importance for the investigation of the pre-lslamic religion, a milestone for research into small finds in Iran and the Near East in general.
+
+The study of these objects is of great interest for the understanding of ritual practices at Vesnave, since establishing their chronology and provenance may help broaden knowledge of personal ornaments in ancient Iran.
 
 واژگان کلیدی: ایران، ا شکانیان، ساسانیان، انگشترها، مهرهها
 
