--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
 
 <main role="main" id="maincontent" class="container-fluid">
   <div class="row">
-    <div class="col-6" style="overflow-y: scroll; height:650px;">
+    <div class="col-6" style="overflow-y: scroll; overflow-x: hidden; height:650px;">
       <app-textview></app-textview>
     </div>
     <div class="col-6">
