--- a/src/app/components/textview/textview.component.html
+++ b/src/app/components/textview/textview.component.html
@@ -1,80 +1,87 @@
 
 <!-- alte Version Objekt -->
 <!------------------------->
-<!-- Keywords; Iran, Parthian, Sasanian, <a global-Identifier="global-Identifier-fingerRings" (click)="NodeZoom($event)" href ="#" id= "xmlObject2" href = "http://localhost:4200/#node2" (click) = "zoomOnNode('node2')">finger-rings-(Object-2)</a>, beads.-->
+<!-- Keywords; Iran, Parthian, Sasanian, <a globalIdentifier="globalIdentifier-fingerRings"  href ="#" id= "xmlObject2" href = "http://localhost:4200/#node2" (click) = "zoomOnNode('node2')">finger-rings-(Object-2)</a>, beads.-->
 
 <!-- neue Version Objekt -->
 <!------------------------->
     <!-- Objekt-Korrekturen: (für angular Leserlichkeit der original XML-Datei)-->
     <!--------------------------------------------------------------------------->
-        <!-- '<rs></rs>' => '<a></a>' -->
-        <!-- '<p/>' => '<p></p>' -->
-        <!-- '{}' => '-- --' -->
-        <!-- 'n=' => ' '         automatisches einfügen der id über global-Identifuer (function in ngOnInit(){}) -->
-        <!-- '<a type="object"...' =>  '<a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-x" ...' -->
+      <!--        '<rs></rs>'                =>         '<a></a>'                                     -->
+      <!--        '<p/>'                     =>         '<p></p>'                                     -->
+      <!--         '{}'                      =>         '-- --'                                       -->
+      <!--         'n='                      =>          ' '                                          -->
+      <!--        '<a type="object"...'      =>          '<a type="object">                           -->
 
-<!------------------------------------------------------------------------------------------------------------------->
-<!------------------------------------------------------------------------------------------------------------------->
+      <!--                        Add "globalIdentifier" to "<a>"                                     -->
+
+      <!--        '<a type="object">'        =>          '<a type="object" globalIdentifier="x">'     -->
+
+            
+      <!--           automatisches einfügen der "id", "href", und des Click-Event "NodeZoom(event)" 
+                                über global-Identifuer (function in ngOnInit(){})                     -->
+
 <!-- EXAMPE-OBJECT -->
-<!------------------->
-    <!-- <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-7" ">Cale Gar mines</a> -->
+                  
+                  <!-- <a type="object"  globalIdentifier="Jewellery">Jewellery</a> -->
 
-<!-- add on Init: -->
+<!-- onInit: -->
 <!------------------>
-    <!-- id automatisch vergeben, je nach eigenem Identifier -->
-    <!-- href automatisch vergeben, je nach Ziel-ID -->
-    <!-- später aus Model-Tabelle des Identifiers lesen, jetzt noch nur für nodes der RDF-Visualisierung  -->
-<!--DANN EXAMPE-OBJECT -->
+<!-- if "globalIdentifier" -->
+<!-- automatisch vergeben: 
+                              id, href, click-event -->
+
+<!--THEN EXAMPE-OBJECT -->
 <!----------------------->
-    <!-- <a type="object" (click)="NodeZoom($event)" global-Identifier="global-Identifier-7" href ="#node7" id="Bagh_59_7" ">Cale Gar mines</a> -->
+    <!-- <a type="object" globalIdentifier="Jewellery" href ="#rdf-Jewellery" id="xml-Jewellery" (click)="NodeZoom(event)" >Jewellery</a> -->
 
 <!------------------------------------------------------------------------------------------------------------------->
 <!------------------------------------------------------------------------------------------------------------------->
 
-<h2><p><a type="object">Iranian </a> 
-    <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-1" >jewellery</a> and <a type="object">small finds</a> in
+<h2><p><a type="object">Iranian</a> 
+    <a type="object" globalIdentifier="Jewellery">Jewellery</a> and <a type="object">small finds</a> in
        <a type="object">religious context</a></p>
     </h2>
  <p>By <a type="object">Natascha Bagherpour Kashani</a></p>
- <p>Keywords;<a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-2" >Iran</a>,<a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-3" 
-       >Parthian</a>,<a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-4" >Sasanian</a>,<a type="object"
-       (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-5" >finger-rings</a>,<a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-6" >beads</a>.</p>
+ <p>Keywords;<a type="object" globalIdentifier="Isfahan-Iran">Iran</a>,<a type="object" 
+       >Parthian</a>,<a type="object" >Sasanian</a>,<a type="object"
+       >finger-rings</a>,<a type="object" >beads</a>.</p>
  <p>واژگان کلیدی: <a type="object">ایران</a>، ا<a type="object">شکانیان</a>، <a
        type="object">ساسانیان</a>، <a type="object">انگشترها</a>، <a type="object">مهره
        ها</a></p>
  <p></p>
  <p></p>
- <p>The items discovered in the <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-7" >Cale Gar mines</a> at <a
-       type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-8" >Vesnave</a> have added a <a type="property">fresh
+ <p>The items discovered in the <a type="object" >Cale Gar mines</a> at <a
+       type="object"   >Vesnave</a> have added a <a type="property">fresh
        perspective</a> to the <a type="property">investigation</a> of <a type="object"
-       (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-9" >pre-lslamic religion</a>, as <a type="property">emphasized
+        >pre-lslamic religion</a>, as <a type="property">emphasized
     by</a></p>
- <p><a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-10">Overlaet</a>, <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-11" >J.
-       Rose</a> and <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-12">P. Kreyenbroek</a>.1 <a
+ <p><a type="object" >Overlaet</a>, <a type="object" >J.
+       Rose</a> and <a type="object"  >P. Kreyenbroek</a>.1 <a
        type="object">The finds</a> from <a type="object">Vesnave</a>
     <a type="property">make an important contribution to our knowledge</a>, not only <a
        type="property">for researching pre-lslamic religion</a>, but also for <a
-       type="property">visualising</a> the <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-13">physical
-       artefacts</a> of <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-14">ancient Iran</a>.</p>
+       type="property">visualising</a> the <a type="object" >physical
+       artefacts</a> of <a type="object"  globalIdentifier="Ancient-Iran">ancient Iran</a>.</p>
  <p>The importance of the <a type="property">study of</a>
     <a type="object">jewellery finds</a> from <a type="object">Vesnave</a></p>
  <p>In <a type="object">Vesnave</a>, <a type="object">two mines</a>
-    <a type="property" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-15">were excavated</a> by <a type="object"
-       (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-16" >a team of German and Iranian archaeologists</a> in <a type="object"
+    <a type="property"  >were excavated</a> by <a type="object"
+        >a team of German and Iranian archaeologists</a> in <a type="object"
        >several campaigns</a>
-    <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-17">from 2001 to 2004</a>.2 They <a type="property"
-       (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-18" >discovered,</a> mainly in <a type="object">Cale Gar 1</a>, <a
+    <a type="object"  >from 2001 to 2004</a>.2 They <a type="property"
+        >discovered,</a> mainly in <a type="object">Cale Gar 1</a>, <a
        type="object">a great number of artefacts</a>, among them <a type="object"
        >jewellery</a> - including <a type="object">many beads</a> ,<a type="object"
-       >finger-rings</a>, <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-19">ear-rings</a> and <a
-       type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-20">pendants</a> - and <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-21"
+       >finger-rings</a>, <a type="object" >ear-rings</a> and <a
+       type="object"  >pendants</a> - and <a type="object"  
        >fragments of metal sheets</a> , as well as much else. It is remarkable that these
     objects were <a type="property">found in such a con- text at Vesnave</a>, because in
        <a type="object">Iran</a> and the <a type="object">wider Near East</a>, <a
        type="object">jewellery</a>
     <a type="property">has been unearthed predominantly</a>
     <a type="object">in graves</a>. <a type="property">To excavate</a> such an amount of
-       <a type="object">artefacts</a> in the <a type="object">Cale Gar caves</a> has
+       <a type="object">artefacts</a> in the <a type="object" globalIdentifier="Cale-Gar-Caves">Cale Gar caves</a> has
     been, apart from their importance for <a type="property">the investigation</a> of the
        <a type="object">pre-lslamic religion</a>, a milestone for research into <a
        type="object">small finds</a> in <a type="object">Iran</a> and the <a
@@ -82,7 +89,7 @@
  <p>The study of these objects is of great interest for the <a type="property"
        >understanding of ritual practices</a> at <a type="object">Vesnave</a>, <a
        type="property">since establishing their chronology and provenance may help broaden
-       knowledge</a> of <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-22" >personal ornaments</a> in ancient
+       knowledge</a> of <a type="object"  >personal ornaments</a> in ancient
        <a type="object">Iran</a>.</p>
  <p><a type="object">A short introduction</a> to the <a type="object">history of
        research</a> into <a type="object">jewellery found</a> in <a type="object"
@@ -95,63 +102,63 @@
     <a type="property">a number of scholars</a>. One of</p>
  <p>C f. contributions by Overlaet, Rose and Kreyenbroek, in this volume,</p>
  <p>Stollner/Mir Eskanderi 2003.</p>
- <p><a type="property">the most famous works</a> is by <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-23">H.
-       Beck</a> , who <a type="property" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-24" >assembled</a><a type="object"
-       (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-25"> the first classification system for beads</a> . Other <a
+ <p><a type="property">the most famous works</a> is by <a type="object" >H.
+       Beck</a> , who <a type="property" >assembled</a><a type="object"
+       > the first classification system for beads</a> . Other <a
        type="object">essential publications</a> include those by <a type="object"
-       (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-26">P. Francis</a> on <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-27">Asian beads</a> ;
-       <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-28">B. Musche</a> on <a type="object">Parthian</a>
-    and <a type="object">Sasanian</a> jewellery; <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-29">M.
+        >P. Francis</a> on <a type="object" >Asian beads</a> ;
+       <a type="object"  >B. Musche</a> on <a type="object">Parthian</a>
+    and <a type="object">Sasanian</a> jewellery; <a type="object"  >M.
        Spaer</a> on <a type="object">glass</a> in the <a type="object">Israel
-       Museum</a>; and a revealing article by <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-30" >St. J.
-       Simpson</a> on <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-31">Sasanian beads</a> . <a
+       Museum</a>; and a revealing article by <a type="object"  >St. J.
+       Simpson</a> on <a type="object"  >Sasanian beads</a> . <a
        type="property">Wide-ranging excavation reports</a> and <a type="property"
        >investigations of jewellery</a> offer a <a type="object">spectrum of
        comparisons</a> for <a type="object">the finds</a> at <a type="object"
-       >Vesnave</a>-.^ However, <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-32" >Near Eastern
-       archaeology</a> and, in particular, <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-33">Iranian
+       >Vesnave</a>-.^ However, <a type="object" >Near Eastern
+       archaeology</a> and, in particular, <a type="object" >Iranian
        archaeology</a>
     <a type="object">lack a basic study of cultic</a> and <a type="object">everyday
        material of the kind</a>
-    <a type="property">found at Vesnave</a>. Regarding the <a type="object">Sasanian
+    <a type="property">found at Vesnave</a>. Regarding the <a type="object"  globalIdentifier="Sasanian-Period">Sasanian
        period</a>, <a type="object">Simpson</a>
     <a type="property">writes</a>: “<a type="property">Corresponding studies</a> of <a
        type="object">everyday material culture</a>
     <a type="property">are scarce yet a number of sites have been excavated</a> (.,.)a</p>
  <p><a type="object">The finds</a></p>
- <p>For <a type="object">a description</a> of <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-34">mine Gale
+ <p>For <a type="object">a description</a> of <a type="object" >mine Gale
        Gar 1</a> , t<a type="property">he reader is referred to the article by</a>
-    <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-35">Thomas Stollner</a> in <a type="object">this volume.
+    <a type="object"  >Thomas Stollner</a> in <a type="object">this volume.
        A large amount of artefacts</a> were <a type="property">discovered there</a>,
     while Cale Gar 2
     <a type="property">yielded just a few finds</a> from a <a type="object">humid
        corner</a>. <a type="object">Ceramics</a>, whether <a type="object"
-       (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-36" >complete vessels</a> or <a type="object">fragments</a>, <a
-       type="property">were found in mine 1</a>; <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-37" >further
-       fragments of textiles</a> , <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-38">animal bones</a> , <a
-       type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-39" >wood</a> and <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-40">wooden
-       vessels</a> , as well as <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-41">other organic
-       material</a> like <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-42">nuts</a> and <a type="object"
-       (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-43">baked remains</a> , <a type="property">were also found
+        >complete vessels</a> or <a type="object">fragments</a>, <a
+       type="property">were found in mine 1</a>; <a type="object" >further
+       fragments of textiles</a> , <a type="object" >animal bones</a> , <a
+       type="object" >wood</a> and <a type="object"  >wooden
+       vessels</a> , as well as <a type="object"  globalIdentifier="Organic-Material">other organic
+       material</a> like <a type="object" >nuts</a> and <a type="object"
+       >baked remains</a> , <a type="property">were also found
     there</a>.</p>
  <p><a type="property">Among the finds from</a>
     <a type="object">Cale Gar 1 and 2</a>, <a type="object">small finds</a> - <a
        type="object">jewellery artefacts primarily</a> - <a type="property">represent a
        significant group</a>. First and foremost, <a type="object">beads</a> and <a
        type="object">pendants</a> are <a type="object">a major group</a>, <a
-       type="property" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-44" >made by</a>
-    <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-45">different techniques</a> and from <a type="object"
-       >different materials,</a> but mainly <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-46">glass</a> and
-       <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-47">stone</a>. Furthermore, <a type="object"
-       (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-48">coins</a>, <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-49">metal finger</a> and <a
+       type="property"  >made by</a>
+    <a type="object" >different techniques</a> and from <a type="object"
+       >different materials,</a> but mainly <a type="object" >glass</a> and
+       <a type="object"  >stone</a>. Furthermore, <a type="object"
+        >coins</a>, <a type="object"  >metal finger</a> and <a
        type="object">ear-rings</a> and <a type="object">a glass finger-ring</a>
-    <a type="property">were discovered</a>, as well as <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-50"
-       >figurative objects</a>, <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-51">inlays</a>, <a
-       type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-52">settings</a>, <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-53">chain
-       links</a>, <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-54">a few ornaments for clothes</a>, <a
-       type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-55">bells</a> and <a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-56">metal
-       sheets</a> (<a type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-57">plain or with figurative </a>or<a
-       type="object" (click)="NodeZoom($event)" href ="#" global-Identifier="global-Identifier-58"> plant depiction</a></p>
+    <a type="property">were discovered</a>, as well as <a type="object"  
+       >figurative objects</a>, <a type="object"  >inlays</a>, <a
+       type="object"  >settings</a>, <a type="object"  >chain
+       links</a>, <a type="object"  >a few ornaments for clothes</a>, <a
+       type="object"  >bells</a> and <a type="object"  >metal
+       sheets</a> (<a type="object" >plain or with figurative </a>or<a
+       type="object" > plant depiction</a></p>
  <p>N. Bagherpour Kashani). Other finds include a <a type="object">glass vessel</a> and a
        <a type="object">fragment of</a>
     <a type="object">one</a>, <a type="object">an arrow head</a>, <a type="object">a
