--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,7 @@ html {
   position: relative;
   min-height: 100%;
 }
+
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
@@ -34,14 +35,12 @@ body {
 }
 
 #maincontent {
-  padding: 100px 15px 40px 15px;
+  padding: 57px 15px 40px 15px;
 }
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-code {
-  font-size: 80%;
+#textview {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100vh;
+  padding: 25px;
 }
